--- a/src/styles/inscricao.css
+++ b/src/styles/inscricao.css
@@ -48,3 +48,10 @@
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
 }
+
+/* ********* */
+
+.topoInsc{
+  margin-top: 8px;
+  margin-bottom: 40px;
+}
