--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -92,9 +92,9 @@ body {
   user-select: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 728px) {
   .bd-placeholder-img-lg {
-    font-size: 3.5rem;
+    /* font-size: 3.5rem; */
   }
 }
 
