--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -157,6 +157,7 @@ body {
 
 .fw-normal{
   padding-top: 20px;
+  color: #14093B;
 }
 
 .background{
@@ -200,6 +201,11 @@ background-color: #fff;
 .video{
   margin-left: 350px;
   margin-top: 100px;
-  
     
 }
+
+.textCenterHome{
+  padding-top: 50px;
+  color: #14093B;
+}
+
