--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -16,6 +16,7 @@ body {
 .carousel {
   margin-bottom: 4rem;
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 3rem;
@@ -36,11 +37,13 @@ body {
   margin-bottom: 1.5rem;
   text-align: center;
 }
+
 /* rtl:begin:ignore */
 .marketing .col-lg-4 p {
   margin-right: .75rem;
   margin-left: .75rem;
 }
+
 /* rtl:end:ignore */
 
 
@@ -48,8 +51,9 @@ body {
 ------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
-  
+  margin: 5rem 0;
+  /* Space out the Bootstrap <hr> more */
+
 }
 
 /* Thin out the marketing headings */
@@ -64,6 +68,7 @@ body {
 -------------------------------------------------- */
 
 @media (min-width: 40em) {
+
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 1.25rem;
@@ -90,6 +95,7 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+
 }
 
 @media (min-width: 728px) {
@@ -137,75 +143,76 @@ body {
 
 /* ************************ */
 
-.textColorHome{
+.textColorHome {
   color: red;
 }
 
-.topoHome{
+.topoHome {
   margin-top: 8px;
   margin-bottom: 40px;
 }
 
-.containerHome{
+.containerHome {
   background-color: #fff;
 }
 
-.textCenterHome{
+.textCenterHome {
   text-align: center;
   margin-bottom: 50px;
 }
 
-.fw-normal{
+.fw-normal {
   padding-top: 20px;
   color: #14093B;
 }
 
-.background{
-  background-image: linear-gradient(to right, #1E0252,#14093B);
+.background {
+  background-image: linear-gradient(to right, #1E0252, #14093B);
 }
 
-.fundo{
+.fundo {
   margin: -40px;
 }
 
-.featurette-heading{
-  color:#18D5FF;
+.featurette-heading {
+  color: #18D5FF;
   margin-top: 60px;
 
- 
+
 }
 
-.lead{
+.lead {
   color: #fff;
   padding-top: 15px;
 }
 
-.lead2{
+.lead2 {
   color: #000;
   padding-top: 15px;
 }
 
 
-.containe-marketing2{
-background-color: #fff;
+.containe-marketing2 {
+  background-color: #fff;
 }
 
-.ratio{
+.ratio {
   margin-top: 50px;
 }
 
-.button{
-  color:#18D5FF;
+.button {
+  color: #18D5FF;
 }
 
-.video{
+.video {
   margin-left: 350px;
   margin-top: 100px;
-    
+ 
+
 }
 
-.textCenterHome{
+
+.textCenterHome {
   padding-top: 50px;
   color: #14093B;
 }
-
