--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -205,10 +205,9 @@ body {
 }
 
 .video {
-  margin-left: 350px;
   margin-top: 100px;
- 
-
+  display: grid;
+  justify-content: center; 
 }
 
 
@@ -220,4 +219,9 @@ body {
 .col-sm-4{
   align-items: center;
   text-align: center;
+}
+
+.videoHome{
+  display: grid;
+  justify-content: center;
 }
