--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -212,6 +212,7 @@ body {
   margin-top: 100px;
   display: grid;
   justify-content: center; 
+  text-align: center;
 }
 
 
@@ -223,11 +224,6 @@ body {
 .col-sm-4{
   align-items: center;
   text-align: center;
-}
-
-.videoHome{
-  display: grid;
-  justify-content: center;
 }
 
 .container-marketing1{
