--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -64,9 +64,13 @@
 
 #container-imagem {
   position: relative;
-  height: 100vh;
+  height: 500px;
   width: 98.79vw;
   /* adicionando imagem de fundo */
-  background: url('../assets/calcada6.jpg');
+  /* background: url('../assets/calcada6.jpg'); */
+  background-color: #14093B;
+  /* background-image: linear-gradient(to right, #4953a0, #63c0b9, #28d9aa); */
+  background-image: linear-gradient(to bottom right,#18D5FFff, #17A2CEff,#154D7C, #14093Bff);
   background-size: cover;
+ padding-bottom: -100;
 }
