--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -75,7 +75,17 @@
  padding-bottom: -100;
 }
 
-.bi-bi-facebook{
-
+#newsletter1{
+  height: 40px;
 }
 
+.button-ca{
+  background-color:#18D5FF;
+  font-weight: bolder;
+  border: 0;
+  /* padding: 10px 35px; */
+  margin-top: 20px;
+  letter-spacing: 2px;
+  color: #14093B;
+ 
+}
