--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -9,6 +9,8 @@ body {
 }
 
 
+
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
@@ -149,10 +151,10 @@ body {
   color: red;
 }
 
-.topoHome {
+/* .topoHome {
   margin-top: 8px;
   margin-bottom: 40px;
-}
+} */
 
 .containerHome {
   background-color: #fff;
@@ -215,6 +217,26 @@ body {
   text-align: center;
 }
 
+/* .video {
+  background-image: url('../assets/fundo3.jpg');
+  background-size: cover; 
+} */
+
+.video {
+  background-image: url('../assets/fundo3.jpg');
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+}
+
+
+.embed-responsive {
+  height: 600px;
+  
+}
+
+
+
 
 .textCenterHome {
   padding-top: 50px;
@@ -242,3 +264,16 @@ padding-top: 60px;
   transform: scale(1.3);
   /* margin-top: 70px; */
 }
+
+h1 {
+  
+  /* color: #14093B; */
+  padding-top: 100px;
+  padding-bottom: 20px;
+}
+
+
+
+/* h1:hover{
+  color: #18D5FF;
+} */
