--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -114,6 +114,7 @@
 
 .criaConta{
   text-decoration: none;
+  padding-top: 0;
 }
 
 .img-fluid{
@@ -139,7 +140,7 @@
 .btn-primary:hover{
   background-color: #14093B;
 }
-#button{
+#click{
   margin-bottom: 0;
 }
 
@@ -154,6 +155,7 @@
 .criaConta{
   color:#14093B;
   margin-top: 0;
+ padding-bottom: 20px;
 }
 
 .checkbox{
@@ -184,3 +186,10 @@
   color: white;
 }
 
+.form-group {
+  text-align: center;
+}
+
+.checkbox.mb-3 {
+  text-align: center;
+}
