--- a/src/styles/nos.css
+++ b/src/styles/nos.css
@@ -24,3 +24,13 @@
 .textCenterHome{
     margin-top: 50px;
 }
+
+.what {
+  display: block;
+  width: 100%;
+  margin: 0;
+}
+
+body {
+  margin: 0;
+}
