--- a/src/styles/nos.css
+++ b/src/styles/nos.css
@@ -29,8 +29,13 @@
   display: block;
   width: 100%;
   margin: 0;
+  width: 100%;
+  height: auto;
 }
 
 body {
-  margin: 0;
+  margin-top: 78px;
+  width: 100%;
+  width: 100%;
 }
+
