--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -57,42 +57,17 @@
   margin-bottom: 40px;
 }
 
-/* .topoLog {
-  background-image: url('../assets/fundo4.jpg');
-  background-size: cover;
-} */
-
-/* body {
-  background-image: url('../assets/fundo4.jpg');
-  background-size: cover;
-} */
-
-/* html, body {
-  height: 100%;
-} */
-
-/* body{
-  background-image: url('../assets/fundo42.png');
-  background-size: cover;
-  background-position: center;
-  height: 100%;
-} */
-
-/* .mypage {
-  background-image: url('../assets/fundo42.png');
-  background-size: cover;
-  background-position: center;
-  height: 100%;
-} */
-
 .mypage {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-repeat: no-repeat;
   background-image: url('../assets/fundoo.png');
   background-size: cover;
   background-position: center;
-  height: 100%;
+  height: 130vh;
+  margin-top: -170px;
+  margin-bottom: -115px;
 }
 
 .form-floating{
