--- a/src/styles/teste.css
+++ b/src/styles/teste.css
@@ -2,17 +2,22 @@
     background-color: #198754;
     color: white;
     border: none;
-    border-radius: 8%;
+    border-radius: 6%;
 }
 
 .excluir{
     background-color: #DC3545;
     color: white;
     border: none;
-    border-radius: 8%;
+    border-radius: 6%;
 }
 
-.centroTeste{
+.modalOpcoes{
+    display: flex;
+    justify-content: space-around;
+    width: 490px;
+}
+
+.tdCentro{
     text-align: center;
-    color: #000;
 }
