--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -171,6 +171,7 @@ body {
   /* margin-top: -40px; */
   color: #14093B;
 }
+
 #titulo {
   margin-bottom: 30px;
   margin-top: -50px;
@@ -179,25 +180,25 @@ body {
 
 .background {
   background-image: linear-gradient(to right, #1E0252, #14093B);
-  display:flex;
-  align-items:center;
+  height: 460px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.background2 {
+  background-color: #fff;
   height: 420px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #14093B;
 }
 
 .fundo {
   margin: -40px;
   /* background-color: #fff; */
 }
-
-.featurette-heading {
-  color: #18D5FF;
-  margin-top: 60px;
- display: flex;
- align-items: center;
- font-size: 2em;
-  margin-top: -20px;
-}
-
 
 .lead {
   color: #fff;
@@ -225,7 +226,7 @@ body {
 .video {
   margin-top: 100px;
   display: grid;
-  justify-content: center; 
+  justify-content: center;
   text-align: center;
 }
 
@@ -239,7 +240,7 @@ body {
 
 .embed-responsive {
   height: 600px;
-  
+
 }
 
 .textCenterHome {
@@ -247,16 +248,16 @@ body {
   color: #14093B;
 }
 
-.col-sm-4{
+.col-sm-4 {
   align-items: center;
   text-align: center;
 }
 
-.container-marketing1{
-padding-top: 60px;
+.container-marketing1 {
+  padding-top: 60px;
 }
 
-.col-md-5{
+.col-md-5 {
   padding-top: 80px;
   padding-bottom: 50px;
   margin: 0;
@@ -264,20 +265,49 @@ padding-top: 60px;
   padding-left: 80px;
 }
 
-#person:hover{
+#person:hover {
   transform: scale(1.3);
   /* margin-top: 70px; */
 }
 
 h1 {
-  
+
   /* color: #14093B; */
   padding-top: 100px;
   padding-bottom: 20px;
 }
 
-
-.row-featurette{
+.alinhar {
   display: flex;
-  align-items: center;
+  justify-content: space-evenly;
+  width: 1210px;
+}
+
+.infoHome {
+  width: 600px;
+  height: 200px;
+  color: #fff;
+}
+
+.infoHome2 {
+  width: 600px;
+  height: 200px;
+  color: #14093B;
+}
+
+.px50 {
+  font-size: 40px;
+}
+
+.px20 {
+  font-size: 17px;
+}
+
+.textoRed {
+  color: red;
+  text-shadow:
+    -1px -1px 0px #000,
+    -1px 1px 0px #000,
+    1px -1px 0px #000,
+    1px 0px 0px #000;
 }
