--- a/src/styles/nos.css
+++ b/src/styles/nos.css
@@ -25,17 +25,29 @@
     margin-top: 50px;
 }
 
-.what {
-  display: block;
-  width: 100%;
-  margin: 0;
-  width: 100%;
-  height: auto;
-}
-
 body {
   margin-top: 78px;
   width: 100%;
   width: 100%;
 }
 
+.fotoNos{
+  width: 1220px;
+  height: 450px;
+}
+
+#fotoNos {
+  position: relative;
+  height: 500px;
+  width: 98.79vw;
+  background-color: #14093B;
+  background-image: linear-gradient(to bottom right,#18D5FFff, #17A2CEff,#154D7C, #14093Bff);
+  background-size: cover;
+ padding-bottom: -100;
+}
+
+.fila{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
