--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -327,4 +327,11 @@ h1 {
 .tdCentroAzul{
   text-align: center;
   color: #18D5FF;
+  padding-top: 40px;
+  margin-bottom: 30px;
+  
+}
+
+.px50{
+  color: #18D5FF;
 }
